cluster/apps/media/podsync/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: podsync
  name: podsync-svc
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: podsync
  type: ClusterIP
